# hugging-face

./: .gitignore  QUICKSTART.md  README.md  convert_src.py  quickstart_predict.py  quickstart_simple.py  requirements.txt
config/: beginner_config.yaml  train_config.yaml
docs/: CONCEPTS.md  FAQ.md
notebooks/: __init___colab.ipynb  convert_src_to_colab.ipynb  data_and_model_colab.ipynb  dataset_colab.ipynb  example_training.py  inference_colab.ipynb  model_colab.ipynb  quickstart_colab.ipynb  train_colab.ipynb  training_colab.ipynb  yolo_training_colab.ipynb
seat_recommendation/: .gitignore  README.md  analyze_seat_properties.py  data_structure.md  demo.py  optimize_assignment.py  pyproject.toml  requirements.txt
seat_recommendation/config/: config.yaml
seat_recommendation/data/: .gitkeep
seat_recommendation/notebooks/: README.md
seat_recommendation/src/: __init__.py  data_generator.py  inference.py  model.py  optimizer.py  preprocessor.py  seat_property_analyzer.py  train.py
src/: __init__.py  dataset.py  inference.py  model.py  train.py
yolo_training/: README.md  data.yaml
