[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seat-recommendation"
version = "1.0.0"
description = "室内環境データとユーザーアンケートを活用した座席推薦システム"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["machine-learning", "recommendation-system", "seat-recommendation", "environmental-data"]
authors = [
    {name = "AI Learning Project"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
advanced = [
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/os-1693/hugging-face"
Repository = "https://github.com/os-1693/hugging-face"
Issues = "https://github.com/os-1693/hugging-face/issues"

[project.scripts]
seat-recommend = "src.inference:main"
seat-train = "src.train:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
